deployment/overlays/openshift/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    component: opa
spec:
  type: ClusterIP
  ports:
    - port: 8181
      targetPort: 8181
      protocol: TCP
      name: http
  selector:
    component: opa
