deployment/overlays/openshift/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: agent
    component: otel-collector
spec:
  type: ClusterIP
  ports:
    - port: 4317
      targetPort: 4317
      protocol: TCP
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      protocol: TCP
      name: otlp-http
    - port: 8889
      targetPort: 8889
      protocol: TCP
      name: prometheus
  selector:
    app: agent
    component: otel-collector
