deployment/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agent
  labels:
    app: agent
    component: agent
    shard: internal
  annotations:
    haproxy.router.openshift.io/timeout: 18000s
    haproxy.router.openshift.io/balance: leastconn
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: "100"
    haproxy.router.openshift.io/rate-limit-connections.rate-http: "1000"
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: "1000"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains
    haproxy.router.openshift.io/enable-websocket: "true"
spec:
  to:
    kind: Service
    name: agent
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
